# essay-plot

./: Cargo.toml  README.md
crates/essay-plot-api/: Cargo.toml
crates/essay-plot-base/: Cargo.toml
crates/essay-plot-macro/: Cargo.toml
crates/essay-plot-wgpu/: Cargo.toml
crates/essay-plot-wgpu/src/: lib.rs
crates/essay-plot-wgpu/src/wgpu/: bezier.rs  hardcopy.rs  image.rs  image.wgsl  main_loop.rs  mod.rs  render.rs  shape2d.rs  shape2d_texture.rs  shape2d_texture.wgsl  text.rs  text_cache.rs  texture_store.rs  triangle2d.rs  triangulate.rs  triangulate2.rs  wgpu.rs
crates/essay-plot2/: Cargo.toml
examples/: bar.rs  bezier_test.rs  box_plot.rs  color_cycles.rs  colormaps.rs  contour.rs  emoji.rs  grid_color.rs  histogram.rs  legend.rs  multichart.rs  palette_colorcet.rs  patch-test.rs  patch.rs  plot.rs  plot_axis.rs  plot_palette.rs  plot_save.rs  png.rs  polar.rs  quiver.rs  radar.rs  scatter.rs  span.rs  specgram.rs  test.rs  text.rs  texture.rs  view_bar.rs  viewport.rs
src/: lib.rs
src/artist/: artist.rs  bar.rs  collection.rs  color.rs  colorbar.rs  colormap.rs  colormaps.rs  container.rs  contour.rs  cycle.rs  grid_color.rs  gridmesh.rs  histogram.rs  image.rs  lines.rs  markers.rs  mod.rs  norm.rs  patch.rs  paths.rs  quiver.rs  span.rs  stem.rs  style.rs  text.rs  tricontour.rs  triplot.rs
src/chart/: artist_id.rs  axis.rs  cartesian_axis.rs  cartesian_frame.rs  chart.rs  config.rs  data_box.rs  data_frame.rs  essay-plot.rc  figure.rs  frame.rs  legend.rs  mod.rs  plot_container.rs  polar_axis.rs  polar_chart.rs  polar_frame.rs  style.rs  tick_locator.rs
src/color/: color.rs  color_cycle.rs  colormaps.rs  mod.rs  palette_brewer.rs  palette_vega.rs
src/config/: config.rs  cycle.rs  essay-plot.rc  mod.rs  style.rs
src/contour/: contour.rs  mod.rs  tricontour.rs  tritile.rs
src/frame/: axis.rs  data_box.rs  frame.rs  layout.rs  legend.rs  mod.rs  plot_container.rs  tick_formatter.rs  tick_locator.rs
src/graph/: figure.rs  graph.rs  mod.rs  style.rs
src/macros/: mod.rs
src/palette/: category.rs  color.rs  colorcet.rs  colormap.rs  colormaps.rs  diverging.rs  mod.rs  palette.rs  palette_brewer.rs  palette_vega.rs  sequential.rs
src/plot/: bar.rs  box_plot.rs  contour.rs  fill_between.rs  grid_color.rs  histogram.rs  image.rs  matshow.rs  mod.rs  pie.rs  plot.rs  quiver.rs  radar.rs  scatter.rs  (+6 more)
(+44 files in other folders)
