[package]
name = "essay-plot"
version = "0.1.28-dev"
edition = "2021"
publish=false

[lib]
path = "src/lib.rs"

[dependencies]
env_logger = { version = "0.11" }
log = { version = "0.4.17" }
essay-tensor = { path = "../essay-tensor"  }
essay-plot-api = { path = "crates/essay-plot-api" }
essay-plot-wgpu = { path = "crates/essay-plot-wgpu" }
futures = "0.3"

[workspace]
members = [
    "crates/*",
]
